PLF-7188 : Add missing modules